--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "webpack-cli": "^3.1.2"
   },
   "scripts": {
+    "start": "node server.js",
     "dev": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
