--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "1.0.0",
   "description": "A Udemy project using webpack, babel, and vanilla js.",
   "main": "server.js",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "hbs": "^4.0.1"
+  },
   "devDependencies": {
-      "webpack": "^4.27.1",
-      "webpack-cli": "^3.1.2"
+    "colors": "^1.3.2",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "webpack --watch",
+    "dev": "webpack --watch --mode development",
+    "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
