--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "hbs": "^4.0.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
     "colors": "^1.3.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
