--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,13 @@
 {
-    "preset": [
-        "env",
+    "presets": [
+        ["env",
         {
-            "target": {
+            "targets": {
                 "browsers": [
                     "last 5 versions",
                     "ie >= 8"
                 ]
             }
-        }
+        }]
     ]
 }
