--- a/package.json
+++ b/package.json
@@ -4,17 +4,15 @@
   "description": "A Udemy project using webpack, babel, and vanilla js.",
   "main": "server.js",
   "dependencies": {
-
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "hbs": "^4.0.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
     "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.2.0",
     "babel-loader": "^8.0.4",
-    "babel-preset-env": "^1.7.0",
     "colors": "^1.3.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2"
